--- a/config/db.sample
+++ b/config/db.sample
@@ -1,12 +1,28 @@
 <?php
 
 // database details
-$wgDBservers = array( array(
-	'host' => '[DBHOST]',
-	'user' => '[DBUSER]',
-	'password' => '[DBPASS]',
-	'dbname' => '[DBNAME]',
-	'type' => '[DBTYPE]',
-	'load' => 1,
-	'flags' => DBO_DEBUG | DBO_DEFAULT
-) );
+$wgDBservers =
+	array(
+		array(
+			'host' => '[DBHOST]',
+			'user' => '[DBUSER]',
+			'password' => '[DBPASS]',
+			'dbname' => '[DBNAME]',
+			'type' => '[DBTYPE]',
+			'load' => 1,
+			'flags' => DBO_DEBUG | DBO_DEFAULT
+		)
+	);
+
+$wgExternalServers['extension1'] =
+	array(
+		array(
+			'host' => '[DBHOSTSHARD]',
+			'user' => '[DBUSERSHARD]',
+			'password' => '[DBPASSSHARD]',
+			'dbname' => '[DBNAMESHARD]',
+			'type' => '[DBTYPESHARD]',
+			'load' => 1,
+			'flags' => DBO_DEBUG | DBO_DEFAULT
+		),
+	);
