--- a/config/parsoid.sample
+++ b/config/parsoid.sample
@@ -1,5 +1,5 @@
 <?php
 
 // parsoid config
-$wgVisualEditorParsoidURL= '[PARSOIDURL]';
-$wgVisualEditorParsoidPrefix = '[PARSOIDPREFIX]';
+$wgParsoidURL= '[PARSOIDURL]';
+$wgParsoidPrefix = '[PARSOIDPREFIX]';
